Integer.valueOf(int) and Double.valueOf(double) doesn't exist in Java 1.4.2.
git-svn-id: svn://svn.code.sf.net/p/xmm/svn/trunk/MeDs@76 a86212f3-689c-4790-bbe1-32f6eb5c469e